Bug 206328 - Contact Headers feature does not work properly in printing assistant
Summary: Contact Headers feature does not work properly in printing assistant
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-05 07:00 UTC by Sabine Faure
Modified: 2009-09-16 20:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-09-05 07:00:19 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Configure Akonadi with an IMAP and Kolab resource.
- Launch Kaddressbook
- Create a Contact and select it
- Go to File menu/Print...
- Select 'Print to File (PDF)'
- Choose a name and a location for the .PDF file
- Click on 'Print'
- Check the 'Selected contacts' QToolButton
- Click on 'Next'
- Select 'Detailed Style' from the Print Style QComboBox
- Click on 'Next'
- Uncheck the 'Use colored contact headers' check box
- Click on 'Finish'

Opens the .pdf you've created. In it you can see that the Headline color is black and the text color is white eventhough you've unchecked that option.

The Headers look the same whether you check or uncheck the box.

Trunk, Svn Rev 1019588
Comment 1 Tobias Koenig 2009-09-05 08:51:56 UTC
Hej Sabine,

it is correct that black/white is used if the custom colors checkbox
has been disabled, as black/white are the default colors.
What else should be used if the user has unchecked it?

Ciao,
Tobias
Comment 2 Sabine Faure 2009-09-10 19:23:41 UTC
I think that when the 'Use colored contact headers' checkbox is unchecked there should not be any background color in the header. 
But for this option to be different than when the box is checked there could be a different setting:
Only the Name in black and bold and maybe a black line to separate that from the Contact details.

Also when the checkbox is checked, it was not clear to me, as a user that the 'Headline background color' and the 'Headline text color' where in fact buttons and that you can change the default color settings. 
So maybe you could add a tool tip like 'click on color buttons to change the default colors'

What do you think?


Trunk, Svn Rev 1021831
Comment 3 Tobias Koenig 2009-09-16 14:35:08 UTC
SVN commit 1024356 by tokoe:

Add tooltip to color buttons

BUG: 206328


 M  +2 -0      detailledstyle.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1024356
Comment 4 Tobias Koenig 2009-09-16 14:36:32 UTC
I have removed the font settings and the 'Use color for headers' checkbox
now, as the HTML based printing doesn't make use of them.
The color buttons are active by default now and have black/white as default.
Comment 5 Sabine Faure 2009-09-16 20:56:51 UTC
It is corrected now.

the 'Use colored contact headers' checkbox has been removed since the buttons are active by default now.
Tool tips on both buttons have been added.

The font setting option has been removed as well.

Trunk, Svn Rev 1024362