Add tooltip to color buttons

BUG: 206328

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1024356